[package]
name = "loop"
version = "0.1.0"
authors = ["Nils Martel <nils.martel@graphmasters.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.1"                # A byte-oriented, zero-copy, parser combinators library
nom-supreme = "0.1.3"    # A collection of excellent utilities for nom
